// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Higher Order Component: withHeader should not render the back button when onBack is not provided 1`] = `
<div
  className="default-background"
>
  <div
    className="uk-container uk-text-center@m"
  >
    <div
      className="uk-section uk-section-xsmall"
    >
      <BackButton />
    </div>
    <h1
      className="uk-heading-divider uk-margin-small-top"
    >
      No back button
    </h1>
    <div
      className="uk-align-center uk-width-1-2@m"
    />
  </div>
</div>
`;

exports[`Higher Order Component: withHeader should render a Header on a component correctly 1`] = `
<div
  className="default-background"
>
  <div
    className="uk-container uk-text-center@m"
  >
    <div
      className="uk-section uk-section-xsmall"
    >
      <BackButton
        goBack={[Function]}
      />
    </div>
    <h1
      className="uk-heading-divider uk-margin-small-top"
    >
      Foo
    </h1>
    <div
      className="uk-align-center uk-width-1-2@m"
    >
      <div />
      <div />
    </div>
  </div>
</div>
`;
